Switching to https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8443
 
 spring.datasource.url=jdbc:h2:mem:documentserverdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -9,11 +9,15 @@ spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.h2.console.enabled = true
-spring.h2.console.path = /h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 spring.datasource.initialization-mode=always
 
-logging.level.com.stepanov.documentserver = info
+logging.level.com.stepanov.documentserver=info
 logging.file.name=logs/documentserver.log
 
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/ds.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=ds
