--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ logging.level.com.stepanov.documentserver=info
 logging.file.name=logs/documentserver.log
 
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore/ds.p12
+server.ssl.key-store=classpath:ds.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=ds
